# hum

./: README.md  pyproject.toml
examples/: basic.yaml  focus-timer.yaml  habit-tracker.yaml  journal.yaml  research-digest.yaml  standup.yaml
hum/: backend.py  channel.py  cli.py  context.py  heartbeat.py  loader.py  notes.py  registry.py  runtime.py
hum/acp/: __init__.py  backend.py  client.py
hum/channels/: __init__.py  http.py  stdin.py  telegram.py
tests/: test_acp_integration.py  test_runtime.py
